[package]
name = "spotifyrics"
version = "0.1.0"
authors = ["Gabriele <gabriele.belluardo@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
tokio = { version = "0.2.22", features = ["macros"] }
rspotify = "0.10.0"
scraper = "0.12.0"
reqwest = "0.10.7"
dotenv = "0.15.0"

